# quonto_fec

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: accounting.cfg  accounting_plan.cfg
qonto2fec/models/: evidence.py  fec_record.py  financial_transaction.py  invoice.py  journal.py  ledger_account.py  misc_transaction.py
qonto2fec/services/: accounting.py  date_utils.py  evidence_db.py  file_utils.py  journal_db.py  ledger_account_db.py  misc_transaction_db.py  qonto_client.py
qonto_fec/: fec_accounting.py  fec_doc.py  qonto.py  utils.py
